Adicionando projeto do IOS

--- a/index.html
+++ b/index.html
@@ -262,6 +262,29 @@
                 <button class="intro_buttons"> Demo</button></a>
             </div>
           </div>
+
+          <div class="p-cards">
+            <div class="p-content-cards">
+              <div class="p-header_projeto open">
+                <img src="imagens/projetos_imgs/banner.jpg" alt="">
+              </div>
+              <div class="p-body_projeto">
+                TCC | World Sports
+              </div>
+              <div class="p-descricao_projeto">
+                Landing Page realizado no curso em Desenvolvimento Web no Instituto da Oportunidade Social, onde o objetivo com a equipe é desenvolver uma página real de
+                streaming e notícias voltadas ao esporte sendo os temas futebol e basquete. Realizado utilizando HTML, CSS e JavaScript.
+              </div>
+
+            </div>
+            <div class="p-buttons">
+              <a href="https://github.com/felipeoliveir44/tcc-ios" target="_blank"><button class="intro_buttons">
+                  Repositorio</button></a>
+              <a href="https://felipeoliveir44.github.io/tcc-ios/" target="_blank">
+                <button class="intro_buttons"> Demo</button></a>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
